[gd_scene load_steps=5 format=3 uid="uid://tree_prop"]

[ext_resource type="Script" path="res://scripts/props/Tree.gd" id="1_tree"]
[ext_resource type="Texture2D" path="res://assets/sprites/environment/tree_oak.png" id="2_tree_tex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_trunk"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 44.0

[node name="Tree" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_tree")

[node name="TrunkSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
texture = ExtResource("2_tree_tex")
region_enabled = true
region_rect = Rect2(0, 40, 64, 24)

[node name="CanopySprite" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(0, -44)
texture = ExtResource("2_tree_tex")
region_enabled = true
region_rect = Rect2(0, 0, 64, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_trunk")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")
